signup/signin/signout views added, new DB migration, minor fixes

--- a/app/board/templates/board/dashboard.html
+++ b/app/board/templates/board/dashboard.html
@@ -1,4 +1,4 @@
-<button type="button" name="button" onclick="history.back()">Back</button>
+<a href="/board/dashboards/"><button type="button" >Back</button></a>
 <h1>{{dashboard}}</h1><p>created: {{dashboard.created_at}}</p>
 <h3  style="color:darkblue;">What we found for {{dashboard.theme}} theme:<h3>
 <h4>
