--- a/app/board/templates/board/dashboard.html
+++ b/app/board/templates/board/dashboard.html
@@ -1,5 +1,19 @@
 <a href="/board/dashboards/"><button type="button" >Back</button></a>
-<h1>{{dashboard}}</h1><p>created: {{dashboard.created_at}}</p>
+<a href="{% url 'view_by_id' dashboard.id %}"><button type="button" >View</button></a>
+
+<h1>{{dashboard}}</h1>{{dashboard.owner}}<p>created: {{dashboard.created_at}}</p>
+<div>
+{% load markdown_extras %}
+{{ dashboard.description | markdown | safe }}
+</div>
+
+<p>add description</p>
+<form  action="{% url 'add_description' dashboard.id %}" method="POST">
+  {% csrf_token %}
+ <textarea name="description" rows="10" cols="40">{{ dashboard.description }}</textarea>
+ <input type="submit" value="Commit"/>
+</form>
+
 <h3  style="color:darkblue;">What we found for {{dashboard.theme}} theme:<h3>
 <h4>
   <ul>
@@ -22,19 +36,10 @@
 </div>
 
 
-<p>add description</p>
-
-<form  action="add_description" method="POST">
-  {% csrf_token %}
-		<input type="submit" value="Add"/>
-</form>
-{% load markdown_extras %}
-{{ dashboard.description | markdown | safe }}
-
 
 
 <p>add new figure</p>
-<form  action="add_figure" method="POST">
+<form  action="{% url 'add_figure' dashboard.id %}" method="POST">
   {% csrf_token %}
 <select name="figure_type" size="4">
 		<option>Frequency analysis</option>
