--- a/app/board/templates/board/dashboard.html
+++ b/app/board/templates/board/dashboard.html
@@ -2,7 +2,26 @@
 <a href="{% url 'view_by_id' dashboard.id %}"><button type="button" >View</button></a>
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
+<style>
+  #myDivMove {
+    position: absolute;
+    z-index: 9;
+    background-color: #f1f1f1;
+    text-align: center;
+    border: 1px solid #d3d3d3;
+  } 
+  #myDiv {
+    height: 600px;
+    width: 600px; 
+  }
+  #mydivheader {
+    padding: 1px;
+    cursor: move;
+    z-index: 10;
+    background-color: #2196F3;
+    color: #fff;
+  }
+</style>
 <h1>{{dashboard}}</h1>{{dashboard.owner}}<p>created: {{dashboard.created_at}}</p>
 <div>
 {% load markdown_extras %}
@@ -32,8 +51,14 @@
       {% for figure in figures %}
       <div>
           <b>{{ figure.type }} (modified: {{ figure.modify_at }} )</b>
-          <div id="myDiv"></div>
-
+          <div id="myDivMove">
+            <div id="myDiv"></div>
+            <div id="mydivheader">Click here to move</div>
+            
+            <!-- <p>Move</p>
+            <p>this</p>
+            <p>DIV</p> -->
+          </div>
           <script type="text/javascript">
 
             var string = JSON.stringify('{{figure.data|get_keys}}').replace(/&#x27;/gi, "");
@@ -51,6 +76,51 @@
 
             Plotly.newPlot('myDiv', data);
           </script>
+
+          <script>
+            dragElement(document.getElementById("myDivMove"));
+            function dragElement(elmnt) {
+              var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+              if (document.getElementById(elmnt.id + "header")) {
+                // if present, the header is where you move the DIV from:
+                document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+              } else {
+                // otherwise, move the DIV from anywhere inside the DIV:
+                elmnt.onmousedown = dragMouseDown;
+              }
+
+              function dragMouseDown(e) {
+                e = e || window.event;
+                e.preventDefault();
+                // get the mouse cursor position at startup:
+                pos3 = e.clientX;
+                pos4 = e.clientY;
+                document.onmouseup = closeDragElement;
+                // call a function whenever the cursor moves:
+                document.onmousemove = elementDrag;
+              }
+
+              function elementDrag(e) {
+                e = e || window.event;
+                e.preventDefault();
+                // calculate the new cursor position:
+                pos1 = pos3 - e.clientX;
+                pos2 = pos4 - e.clientY;
+                pos3 = e.clientX;
+                pos4 = e.clientY;
+                // set the element's new position:
+                elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+                elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+              }
+
+              function closeDragElement() {
+                // stop moving when mouse button is released:
+                document.onmouseup = null;
+                document.onmousemove = null;
+              }
+            }
+          </script>
+
           <p>{{figure.data}}</p>
           <!-- <p>{{figure.data|get_keys}}</p>
           <p>{{figure.data|get_values}}</p> -->
