--- a/app/board/templates/board/login.html
+++ b/app/board/templates/board/login.html
@@ -8,7 +8,7 @@
 <body>
 <div id="form_wrapper" class="input_container">
   <div id="form_left">
-               <img src="{% static 'board/log_icon.jpg' %}" alt="3d rjekich">
+               <img src="{% static 'board/img/log_icon.jpg' %}" alt="3d rjekich">
   </div>
 <div id="form_right">
   <h1>Sopranos Login</h1>
