--- a/app/board/templates/board/dashboards.html
+++ b/app/board/templates/board/dashboards.html
@@ -6,7 +6,7 @@
 {{ request.user.username }}
 <h3>Create new dashboard</h3>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src={% static 'board/slider.js' %}></script>
+<script src={% static 'board/js/slider.js' %}></script>
 <form action="create_dashboard/" method="POST">
     {% csrf_token %}
     <div>
@@ -18,7 +18,7 @@
       <input type="text" name="theme" maxlength="40" size="30" placeholder="e.g. Donald Trump" value="{{ theme }}"/><br>
     </div>
     <div>
-        <p><input type="range" id="rangeInput" min="1" max="3"  value="2" name="n_articles">
+        <p><input type="range" id="rangeInput" min="1" max="7"  value="2" name="n_articles">
            Info <b><label id="rangeText"/></b></p>
     </div>
     <input type="checkbox" name="is_private">Private<Br>
