--- a/app/board/templates/board/signup.html
+++ b/app/board/templates/board/signup.html
@@ -1,17 +1,34 @@
-<h2>Sign up Form</h2>
-<form method="post">
-  {% csrf_token %}
-  {% for field in form %}
+{% load static %}
+{% load widget_tweaks %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html"; charset="utf-8"/>
+    <link href="{% static 'board/login.css' %}" rel="stylesheet">
+</head>
+<body>
+<div id="form_wrapper" class="input_container">
+  <div id="form_left">
+    <img src="{% static 'board/img/signup.jpg' %}" alt="3d rjekich">
+ </div>
+ <div id="form_right">
+   <h1>Refister to Sopranos</h1>
+   <form method="post">
+    {% csrf_token %}
+    {% for field in form %}
     <p>
-      {{ field.label_tag }}<br>
-      {{ field }}
-      {% if field.help_text %}
+      {{ field | append_attr:"class: input_field"}}
+      <!-- {% if field.help_text %}
         <small style="color: gray">{{ field.help_text }}</small>
-      {% endif %}
-      {% for error in field.errors %}
+      {% endif %} -->
+      <!-- {% for error in field.errors %}
         <p style="color: red">{{ error }}</p>
-      {% endfor %}
+      {% endfor %} -->
     </p>
   {% endfor %}
-  <button type="submit">Sign up</button>
+  <input type="submit" value="Sign Up" id='input_submit' class='input_field'>
 </form>
+</div>
+</div>
+</body>
+</html>
