minor fixes, login-signup styles

--- a/app/board/templates/board/login.html
+++ b/app/board/templates/board/login.html
@@ -28,7 +28,7 @@
     </div>
     <input type="submit" value="Login" id='input_submit' class='input_field'>
     <a href="/board/signup/">
-      <input type="submit" value="Login" id='input_submit' class='input_field'>
+      <button type="button" id="signup" class='input_field'>Sign up</button>
     </a>
 
 </form>
