--- a/app/board/static/board/login.css
+++ b/app/board/static/board/login.css
@@ -27,7 +27,7 @@ body {
 
 #form_wrapper {
         width: 1000px;
-        height: 700px;
+        height: 750px;
         /* this will help us center it*/
         margin:auto;
         background-color: var(--form_bg);
@@ -39,7 +39,7 @@ body {
         /* with a small gap in between them*/
         grid-gap: 5vw;
         /* add some padding around */
-        padding: 5vh 15px;
+        padding: 3vh 15px;
 }
 
 #form_left {
@@ -51,7 +51,7 @@ body {
 
    #form_left img {
        width: 450px;
-       height: 450px;
+       height: 530px;
    }
 
 #form_right {
@@ -183,4 +183,20 @@ body {
                #form_left {
                    display: none;
                }
+           }
+
+
+           input:-webkit-autofill,
+           input:-webkit-autofill:hover,
+           input:-webkit-autofill:focus,
+           textarea:-webkit-autofill,
+           textarea:-webkit-autofill:hover,
+           textarea:-webkit-autofill:focus,
+           select:-webkit-autofill,
+           select:-webkit-autofill:hover,
+           select:-webkit-autofill:focus {
+             border: None;
+             -webkit-text-fill-color: None;
+             -webkit-box-shadow: None;
+             transition: background-color 5000s ease-in-out 0s;
            }
