--- a/app/board/templates/board/login.html
+++ b/app/board/templates/board/login.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html"; charset="utf-8"/>
-    <link href="{% static 'board/login.css' %}" rel="stylesheet">
+    <link href="{% static 'board/css/login.css' %}" rel="stylesheet">
 </head>
 <body>
 <div id="form_wrapper" class="input_container">
