--- a/app/board/templates/board/signup.html
+++ b/app/board/templates/board/signup.html
@@ -13,7 +13,7 @@
     <img src="{% static 'board/img/signup.jpg' %}" alt="3d rjekich">
  </div>
  <div id="form_right">
-   <h1>Refister to Sopranos</h1>
+   <h1>Register to Sopranos</h1>
    <form method="post">
       {% csrf_token %}
       {% for field in form %}
