--- a/app/board/static/board/feed.css
+++ b/app/board/static/board/feed.css
@@ -187,7 +187,7 @@ p.nav-username {
   -ms-flex-wrap: wrap; /* IE10 */
   flex-wrap: wrap;
   background-color: white;
-  padding: 10px;
+  padding: 10px 5px;
   margin: 20px 5px;
   border-radius: 10px;
   text-decoration: none;
