--- a/app/board/templates/board/feed.html
+++ b/app/board/templates/board/feed.html
@@ -19,11 +19,16 @@
 <div class="navbar">
   <a href="/board/feed/" class="active">Feed</a>
   <a href="/board/dashboards/">My dashboards</a>
+  {% if request.user.is_authenticated %}
   <a class="right" href="/board/signout/">Sign out</a>
   <a  class="right" id="nav-avatar">
     <img class="nav-avatar" src="{{ request.user.email  | gravatar_url }}">
     <p class="nav-username">{{request.user.username}}<p>
   </a>
+  {% else %}
+  <a class="right" href="/board/signin/">Sign in</a>
+  <a class="right" href="/board/signup/">Sign up</a>
+  {% endif %}
 </div>
 
 <div class="row">
