--- a/app/board/templates/board/feed.html
+++ b/app/board/templates/board/feed.html
@@ -33,19 +33,26 @@
 
 <div class="row">
   <div class="side">
-    <div class="profile-section">
-      <div class="left">
-        <h2>{{request.user.username}}</h2>
-        <h5>{{request.user.email}}</h5>
+    {% if request.user.is_authenticated %}
+      <div class="profile-section">
+        <div class="left">
+          <h2>{{request.user.username}}</h2>
+          <h5>{{request.user.email}}</h5>
+        </div>
+        <div class="right">
+          <img  src="{{ request.user.email | gravatar_url }}">
+          <a class="total-dashboards">10<b style="font-size:14px;color:gray;">dashboards</b><a>
+          <!-- <div class="profile-stat">
+            5 dashs
+          </div> -->
+        </div>
       </div>
-      <div class="right">
-        <img  src="{{ request.user.email | gravatar_url }}">
-        <a class="total-dashboards">10<b style="font-size:14px;color:gray;">dashboards</b><a>
-        <!-- <div class="profile-stat">
-          5 dashs
-        </div> -->
-      </div>
+    {% else %}
+    <div class="guest-notify">
+      <h2>Welcome to Sopranos, stranger!</h2>
+      <p>Get <b><a href="/board/signup/">membership</a></b> and create your first dashboard 👽</p>
     </div>
+    {% endif %}
     <div class="fakeimg" style="height:200px;">Image</div>
     <h3>More Text</h3>
     <p>Lorem ipsum dolor sit ame.</p>
